# PhishKiller

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.browser  README.md  alembic.ini  docker-compose.yml  pyproject.toml  start-worker.bat
.claude/: settings.local.json
alembic/: env.py
alembic/versions/: 5d423d02b247_initial_schema.py  a1b2c3d4e5f6_drop_phishstats_feed.py  a8f1c2d3e4b5_add_phishstats_phishing_database_feed.py  b9e2f4a7c8d1_fix_feedsource_enum_casing.py  c3a7d5e9f1b2_remove_base64_block_indicator_type.py  d4f5a6b7c8e9_drop_urlhaus_phishing_database_feeds.py  e5a1b2c3d4f6_add_kit_pattern_version.py  f6b2c3d4e5a7_add_investigation_and_chain_tracking.py  g7c3d4e5f6a8_add_campaign_auto_generated.py  h8d4e5f6a7b9_add_source_url_indicator_type.py  i9e5f6a7b8c0_add_kit_delete_cascades.py  j0f6g7h8i9a1_drop_feed_system.py  k1g7h8i9j0b2_add_investigation_description.py  l2h8i9j0k1c3_add_analysis_result_unique_constraint.py  m3i9j0k1l2d4_add_external_js_fetch_analysis_type.py  n4j0k1l2m3e5_add_dedup_and_polymorphism.py  o5k1l2m3n4f6_add_family_and_kit_actors.py  q7m3n4o5p6h8_add_actor_auto_generated.py  (+9 more)
docs/: cloudflare-turnstile-bypass.md
frontend/: .env.example  index.html  package-lock.json  package.json
rules/: aitm_phaas.yar  evasion.yar  kit_families.yar  phishing_generic.yar
scripts/: cleanup_false_positive_iocs.py  cleanup_false_positive_iocs_r2.py  cleanup_false_positive_iocs_r4.py  cleanup_false_positive_phones.py  drop_phishing_database_urlhaus.py  recompute_similarity.py  setup_private.py  trace_logo.py  update_yara_rules.sh
(+273 files in other folders)
